--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,15 @@ dependencies {
     compile (
     	[group: 'commons-collections', name: 'commons-collections', version: '3.2'],
     	
+    	//spring-boot
     	[group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.7.RELEASE'],
     	
-    	[group: 'org.reflections', name: 'reflections', version: '0.9.11']
+    	//对java反射的加强
+    	[group: 'org.reflections', name: 'reflections', version: '0.9.11'],
+    	
+    	//面向切面AspectJ
+    	[group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'],
+    	[group: 'org.aspectj', name: 'aspectjrt', version: '1.8.10']
     	
     	)
 }
