--- a/build.gradle
+++ b/build.gradle
@@ -46,10 +46,12 @@ dependencies {
     	[group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'],
     	[group: 'org.aspectj', name: 'aspectjrt', version: '1.8.10'],
     	
+    	//mybatis
     	[group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'],
     	[group: 'mysql', name: 'mysql-connector-java', version: '5.1.34'],
     	
-    	
+    	//druid
+    	[group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.10'],
     	)
 }
 
