--- a/build.gradle
+++ b/build.gradle
@@ -40,12 +40,18 @@ dependencies {
     	[group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.7.RELEASE'],
     	
     	//对java反射的加强
-    	[group: 'org.reflections', name: 'reflections', version: '0.9.11'],
+    	//[group: 'org.reflections', name: 'reflections', version: '0.9.11'],
     	
     	//面向切面AspectJ
     	[group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'],
-    	[group: 'org.aspectj', name: 'aspectjrt', version: '1.8.10']
+    	[group: 'org.aspectj', name: 'aspectjrt', version: '1.8.10'],
     	
+    	//mybatis
+    	[group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'],
+    	[group: 'mysql', name: 'mysql-connector-java', version: '5.1.34'],
+    	
+    	//druid
+    	[group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.10'],
     	)
 }
 
